--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,5 +19,5 @@
   class="display-1 mt-4"
   i18n="Greetings|Greetings at the home page header@@homeHeader"
 >
-  Filme schauen bis zum umfallen!
+  Filme schauen bis zum Umfallen!
 </h1>
