--- a/src/app/film/details-film/schlagwoerter/details-schlagwoerter.component.html
+++ b/src/app/film/details-film/schlagwoerter/details-schlagwoerter.component.html
@@ -4,7 +4,7 @@
       <div class="checkbox">
         <input type="checkbox" checked disabled class="checkbox" />
         <label class="ms-2" [ngSwitch]="schlagwort">
-          <span *ngSwitchCase="'SPANNEND'">JavaScript</span>
+          <span *ngSwitchCase="'SPANNEND'">Spannend</span>
           <span *ngSwitchCase="'GRUSELIG'">TypeScript</span>
         </label>
       </div>
