--- a/src/app/film/details-film/details-breadcrumbs.component.html
+++ b/src/app/film/details-film/details-breadcrumbs.component.html
@@ -1,12 +1,9 @@
 <div class="breadcrumb">
-    <span class="breadcrumb-item">
-      <a routerLink="/" aria-label="Startseite">Startseite</a>
-    </span>
-    <span class="breadcrumb-item">
-      <a routerLink="/film/suche" aria-label="Film suchen"
-        >Suche B&uuml;cher</a
-      >
-    </span>
-    <span class="breadcrumb-item active">Details</span>
-  </div>
-  
+  <span class="breadcrumb-item">
+    <a routerLink="/" aria-label="Startseite">Startseite</a>
+  </span>
+  <span class="breadcrumb-item">
+    <a routerLink="/film/suche" aria-label="Film suchen">Suche B&uuml;cher</a>
+  </span>
+  <span class="breadcrumb-item active">Details</span>
+</div>
