--- a/src/app/film/suche-filme/suchformular/suche-genre.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-genre.component.html
@@ -12,9 +12,7 @@
         (change)="onChange($event)"
       />
       <!-- margin left -->
-      <label class="radio-inline ms-1" for="actionInput">
-        ACTION
-      </label>
+      <label class="radio-inline ms-1" for="actionInput"> ACTION </label>
     </div>
 
     <div class="form-check">
