--- a/src/app/film/create-film/create-schauspieler.component.html
+++ b/src/app/film/create-film/create-schauspieler.component.html
@@ -7,20 +7,20 @@
       <input
         type="checkbox"
         class="form-check-input"
-        id="spannendInput"
-        formControlName="spannend"
+        id="leonardoInput"
+        formControlName="leonardo"
       />
-      <label for="spannendInput" class="ms-1">JavaScript</label>
+      <label for="leonardoInput" class="ms-1">Leondardo</label>
     </div>
 
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="gruseligInput"
-        formControlName="gruselig"
+        id="salmaInput"
+        formControlName="salma"
       />
-      <label for="gruseligInput" class="ms-1">TypeScript</label>
+      <label for="salmaInput" class="ms-1">Salma</label>
     </div>
   </div>
 </div>
