schlagwoerter-Dateien in Schauspieler umbenannt

--- a/src/app/film/details-film/schauspieler/details-schauspieler.component.html
+++ b/src/app/film/details-film/schauspieler/details-schauspieler.component.html
@@ -1,10 +1,10 @@
-<div class="row" *ngFor="let schlagwort of values">
+<div class="row" *ngFor="let schauspieler of values">
   <div class="col col-11">
     <div class="checkbox">
       <input type="checkbox" checked disabled class="checkbox" />
       <label class="ms-2" [ngSwitch]="schlagwort">
-        <span *ngSwitchCase="'SPANNEND'">Spannend</span>
-        <span *ngSwitchCase="'GRUSELIG'">TypeScript</span>
+        <span *ngSwitchCase="'LEONARDO'">Spannend</span>
+        <span *ngSwitchCase="'SALMA'">TypeScript</span>
       </label>
     </div>
   </div>
