--- a/src/app/film/details-film/schauspieler/details-schauspieler.component.html
+++ b/src/app/film/details-film/schauspieler/details-schauspieler.component.html
@@ -2,7 +2,7 @@
   <div class="col col-11">
     <div class="checkbox">
       <input type="checkbox" checked disabled class="checkbox" />
-      <label class="ms-2" [ngSwitch]="schlagwort">
+      <label class="ms-2" [ngSwitch]="schauspieler">
         <span *ngSwitchCase="'LEONARDO'">Spannend</span>
         <span *ngSwitchCase="'SALMA'">TypeScript</span>
       </label>
