--- a/src/app/film/details-film/stammdaten/details-release.component.html
+++ b/src/app/film/details-film/stammdaten/details-release.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-2">
-  <label class="col col-1"> Datum </label>
+  <label class="col col-1"> Release </label>
   <div class="col col-11">
-    {{ datum === undefined ? "N/A" : datum.toLocaleString() }}
+    {{ release === undefined ? "N/A" : release.toLocaleString() }}
   </div>
 </div>
