schlagwoerter durch schauspieler & begriffe geändert

--- a/src/app/film/details-film/schauspieler/details-schauspieler.component.html
+++ b/src/app/film/details-film/schauspieler/details-schauspieler.component.html
@@ -3,7 +3,7 @@
     <div class="checkbox">
       <input type="checkbox" checked disabled class="checkbox" />
       <label class="ms-2" [ngSwitch]="schauspieler">
-        <span *ngSwitchCase="'LEONARDO'">Spannend</span>
+        <span *ngSwitchCase="'LEONARDO'">Leonardo</span>
         <span *ngSwitchCase="'SALMA'">TypeScript</span>
       </label>
     </div>
