--- a/src/app/film/suche-filme/suchformular/suche-schlagwoerter.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-schlagwoerter.component.html
@@ -5,22 +5,22 @@
       <input
         type="checkbox"
         class="form-check-input"
-        id="spannendInput"
-        [(ngModel)]="spannend"
-        (change)="onChangeSpannend($event)"
+        id="leonardoInput"
+        [(ngModel)]="leonardo"
+        (change)="onChangeLeonardo($event)"
       />
-      <label for="spannendInput" class="ms-1"> Spannend </label>
+      <label for="leonardoInput" class="ms-1"> Leonardo </label>
     </div>
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="gruseligInput"
-        [(ngModel)]="gruselig"
-        name="gruselig"
-        (change)="onChangeGruselig($event)"
+        id="salmaInput"
+        [(ngModel)]="salma"
+        name="salma"
+        (change)="onChangeSalma($event)"
       />
-      <label for="gruseligInput" class="ms-1"> Gruselig </label>
+      <label for="salmaInput" class="ms-1"> Salma </label>
     </div>
   </div>
 </div>
