--- a/src/app/film/create-film/create-schauspieler.component.html
+++ b/src/app/film/create-film/create-schauspieler.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <label for="schlagwoerterInput" class="col col-2 col-form-label gy-3">
+  <label for="schauspielerInput" class="col col-2 col-form-label gy-3">
     Schlagw&ouml;rter
   </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
