--- a/src/app/film/suche-filme/suchformular/suche-schauspieler.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-schauspieler.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <label class="col col-2 col-form-label gy-3"> Schlagw&ouml;rter </label>
+  <label class="col col-2 col-form-label gy-3"> Schauspieler </label>
   <div class="col col-10 gy-3">
     <div class="form-checkbox">
       <input
