--- a/src/app/film/details-film/schauspieler/details-schauspieler.component.html
+++ b/src/app/film/details-film/schauspieler/details-schauspieler.component.html
@@ -4,7 +4,7 @@
       <input type="checkbox" checked disabled class="checkbox" />
       <label class="ms-2" [ngSwitch]="schauspieler">
         <span *ngSwitchCase="'LEONARDO'">Leonardo</span>
-        <span *ngSwitchCase="'SALMA'">TypeScript</span>
+        <span *ngSwitchCase="'SALMA'">Salma</span>
       </label>
     </div>
   </div>
