--- a/src/app/film/details-film/details-breadcrumbs.component.html
+++ b/src/app/film/details-film/details-breadcrumbs.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/" aria-label="Startseite">Startseite</a>
   </span>
   <span class="breadcrumb-item">
-    <a routerLink="/film/suche" aria-label="Film suchen">Suche B&uuml;cher</a>
+    <a routerLink="/film/suche" aria-label="Film suchen">Suche Filme</a>
   </span>
   <span class="breadcrumb-item active">Details</span>
 </div>
