--- a/src/app/film/details-film/details-film.component.html
+++ b/src/app/film/details-film/details-film.component.html
@@ -32,7 +32,7 @@
           aria-controls="schauspieler"
           aria-expanded="true"
         >
-          Schlagw&ouml;rter
+          Schauspieler
         </a>
       </li>
     </ul>
