--- a/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
+++ b/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
@@ -4,7 +4,7 @@
 <div class="card" aria-label="Gefundene Filme" *ngIf="filme.length">
   <div class="card-header">
     <i class="material-icons">folder_open</i>
-    <span class="ms-1 fw-bold">Gefundene B&uuml;cher</span>
+    <span class="ms-1 fw-bold">Gefundene Filme</span>
   </div>
   <div class="card-body">
     <table
@@ -16,7 +16,7 @@
         <th>ID</th>
         <th>Titel</th>
         <th>Studio</th>
-        <th>Schlagw&ouml;rter</th>
+        <th>Schauspieler</th>
         <th>
           <span class="visually-hidden">Spalte f&uuml;r Details</span>
         </th>
@@ -78,7 +78,7 @@
         <ng-template ngPluralCase="=0"> Es gibt kein Film </ng-template>
         <ng-template ngPluralCase="=1"> Es gibt ein Film </ng-template>
         <ng-template ngPluralCase="other">
-          Es gibt {{ filme.length }} B&uuml;cher
+          Es gibt {{ filme.length }} Filme
         </ng-template>
       </span>
     </div>
