--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -61,7 +61,7 @@
           <i class="material-icons">info</i>
           <!-- margin left -->
           <span class="ms-1">
-            Hinweis: Keine Eingabe liefert alle B&uuml;cher
+            Hinweis: Keine Eingabe liefert alle Filme
           </span>
         </div>
       </div>
