--- a/src/app/film/diagramme/liniendiagramm.html
+++ b/src/app/film/diagramme/liniendiagramm.html
@@ -1,4 +1,4 @@
-<h3>Bewertungen und Preise der B&uuml;cher</h3>
+<h3>Bewertungen und Preise der Filme</h3>
 
 <section id="liniendiagramm" mt="5">
   <ngx-charts-line-chart
