--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <span class="ms-1 fw-bold">Neues Buch</span>
+    <span class="ms-1 fw-bold">Neuer Film</span>
   </div>
 
   <div class="card-body">
