--- a/src/app/layout/header/login-logout.component.html
+++ b/src/app/layout/header/login-logout.component.html
@@ -42,7 +42,7 @@
   >
     <div class="col-12">
       <label for="usernameInput" class="col-form-label">
-        <small>Benutzername</small>
+        <small style="color:white">Username</small>
       </label>
       <input
         id="usernameInput"
@@ -58,7 +58,7 @@
 
     <div class="col-12">
       <label for="passwordInput" class="col-form-label">
-        <small>Passwort</small>
+        <small style="color:white">Passwort</small>
       </label>
       <input
         id="passwordInput"
