--- a/src/app/layout/header/logo.component.html
+++ b/src/app/layout/header/logo.component.html
@@ -16,5 +16,7 @@
 -->
 
 <a routerLink="/" aria-label="Startseite">
-  <img src="/assets/img/logo.webp" alt="Logo" height="90" width="317" />
+  <button> type=<span class="material-symbols-outlined">
+    home
+    </span>  </button>
 </a>
