anpassung am suchformular

--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -11,7 +11,7 @@
 <section class="card" [@fadeIn]="'in'">
   <div class="card-header bg-primary">
     <i class="material-icons">search</i>
-    <span class="ms-1 fw-bold"> Eingabe der Suchkriterien </span>
+    <span class="ms-1 fw-bold"> Suchen </span>
   </div>
   <div class="card-body">
     <!--
@@ -61,7 +61,7 @@
           <i class="material-icons">info</i>
           <!-- margin left -->
           <span class="ms-1">
-            Hinweis: Keine Eingabe liefert alle B&uuml;cher
+            Hinweis: Keine Eingabe liefert alle Filme
           </span>
         </div>
       </div>
