--- a/src/app/film/suche-filme/suchformular/suche-studio.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-studio.component.html
@@ -9,8 +9,8 @@
       (change)="onChange($event)"
     >
       <option value=""></option>
-      <option value="DISNEY">Foo Studio</option>
-      <option value="WARNER">Bar Studio</option>
+      <option value="DISNEY">Disney</option>
+      <option value="WARNER">Warner</option>
     </select>
   </div>
 </div>
