--- a/src/app/film/create-film/create-genre.component.html
+++ b/src/app/film/create-film/create-genre.component.html
@@ -8,7 +8,7 @@
         id="druckausgabeInput"
         formControlName="genre"
         name="genre"
-        value="LUSTIG"
+        value="COMEDY"
       />
       <label class="radio-inline ms-1" for="druckausgabeInput">
         Druckausgabe
