--- a/src/app/layout/header/login-logout.component.html
+++ b/src/app/layout/header/login-logout.component.html
@@ -72,7 +72,7 @@
       />
     </div>
     <div class="col-12">
-      <button
+      <button style = background-color:grey;
         type="submit"
         class="btn btn-primary btn-sm"
         tabindex="3"
