--- a/src/app/layout/header/logo.component.html
+++ b/src/app/layout/header/logo.component.html
@@ -14,9 +14,10 @@
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 <a routerLink="/" aria-label="Startseite">
-  <button> type=<span class="material-symbols-outlined">
+  <button style = background-color:black;> <span class="material-symbols-outlined" style = color:white;>
     home
-    </span>  </button>
+    </span></button> 
 </a>
