--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -9,7 +9,7 @@
 -->
 
 <section class="card" [@fadeIn]="'in'">
-  <div class="card-header bg-primary">
+  <div style=background-color:grey class="card-header bg-primary" >
     <i class="material-icons">search</i>
     <span class="ms-1 fw-bold"> Suchen </span>
   </div>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col offset-2 gy-3">
           <!-- default: type="submit" -->
-          <button type="submit" class="btn btn-primary">
+          <button style=background-color:grey type="submit" class="btn btn-primary">
             <i class="material-icons">search</i>
             <span class="ms-1">Suchen</span>
           </button>
