--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -9,9 +9,9 @@
 -->
 
 <section class="card" [@fadeIn]="'in'">
-  <div style=background-color:grey class="card-header bg-primary" >
-    <i class="material-icons">search</i>
-    <span class="ms-1 fw-bold"> Suchen </span>
+  <div class="card-header" style=background-color:grey >
+    <i class="material-icons" style=color:white>search</i>
+    <span class="ms-1 fw-bold" style=color:white > Suchekriterien </span>
   </div>
   <div class="card-body">
     <!--
@@ -71,7 +71,7 @@
           <!-- default: type="submit" -->
           <button style=background-color:grey type="submit" class="btn btn-primary">
             <i class="material-icons">search</i>
-            <span class="ms-1">Suchen</span>
+            <span class="ms-1">suchen</span>
           </button>
         </div>
       </div>
