--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -11,7 +11,7 @@
 <section class="card" [@fadeIn]="'in'">
   <div class="card-header" style=background-color:grey >
     <i class="material-icons" style=color:white>search</i>
-    <span class="ms-1 fw-bold" style=color:white > Suchekriterien </span>
+    <span class="ms-1 fw-bold" style=font-size:larger  style=color:white> Suchekriterien </span>
   </div>
   <div class="card-body">
     <!--
