regisseur für web mirt richtigem Datentyp

--- a/src/app/film/create-film/create-regisseur.component.html
+++ b/src/app/film/create-film/create-regisseur.component.html
@@ -1,31 +1,69 @@
 <div class="row">
-  <label for="regisseurInput" class="col col-2 col-form-label gy-3"
-    >Regisseur *</label
-  >
+  <label for="nachnameInput" class="col col-2 col-form-label gy-3">
+    Nachname *
+  </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="input-group">
       <input
-        id="regisseurInput"
-        placeholder="Regisseur in Prozent, z.B. 5.67"
-        required
-        type="number"
+        id="nachnameInput"
+        placeholder="Nachname"
         class="form-control"
-        formControlName="regisseur"
-        [class.is-invalid]="regisseur.invalid && regisseur.touched"
-        [class.is-valid]="regisseur.valid && regisseur.touched"
+        autofocus
+        formControlName="nachname"
+        [class.is-invalid]="nachname.invalid && nachname.touched"
+        [class.is-valid]="nachname.valid && nachname.touched"
       />
-      <span class="input-group-addon ms-1">%</span>
 
       <div
         class="invalid-feedback"
-        *ngIf="regisseur.invalid && regisseur.touched && regisseur.errors"
+        *ngIf="nachname.invalid && nachname.touched && nachname.errors"
       >
         <i class="material-icons">error</i>
-        <div *ngIf="regisseur.errors['required']">
-          <span class="ms-1">
-            Ein Regisseur muss in Prozent eingegeben werden, z.B. 5.67.
-          </span>
-        </div>
+        <span class="ms-1" *ngIf="nachname.errors['required']">
+          Ein Nachname muss eingegeben werden.
+        </span>
+        <span class="ms-1" *ngIf="nachname.errors['minlength']">
+          Ein Nachname muss mindestens 2 Zeichen lang sein.
+        </span>
+        <span class="ms-1" *ngIf="nachname.errors['pattern']">
+          Ein Nachname muss mit einem Buchstaben beginnen.
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <label for="vornameInput" class="col col-2 col-form-label gy-3">
+    VORNAME *
+  </label>
+  <div class="col col-10 gy-3" [formGroup]="createForm">
+    <div class="input-group">
+      <input
+        id="vornameInput"
+        placeholder="VORNAME"
+        class="form-control"
+        autofocus
+        formControlName="vorname"
+        [class.is-invalid]="vorname.invalid && vorname.touched"
+        [class.is-valid]="vorname.valid && vorname.touched"
+      />
+
+      <div
+        class="invalid-feedback"
+        *ngIf="vorname.invalid && vorname.touched && vorname.errors"
+      >
+        <i class="material-icons">error</i>
+        <span class="ms-1" *ngIf="vorname.errors['required']">
+          Eine VORNAME muss eingegeben werden.
+        </span>
+        <i class="material-icons">error</i>
+        <span class="ms-1" *ngIf="vorname.errors['minlength']">
+          Eine Postleitzahl muss fünfstellig sein
+        </span>
+        <i class="material-icons">error</i>
+        <span class="ms-1" *ngIf="vorname.errors['maxlength']">
+          Eine Postleitzahl muss fünfstellig sein
+        </span>
       </div>
     </div>
   </div>
