--- a/src/app/film/suche-filme/suche-filme.component.html
+++ b/src/app/film/suche-filme/suche-filme.component.html
@@ -1,6 +1,6 @@
 <hs-suchformular (suchkriterien$)="suchen($event)"></hs-suchformular>
 
-<section class="mt-2" aria-label="Suchergebnis" style=background-color:grey>
+<section class="mt-2" aria-label="Suchergebnis" style="background-color: grey">
   <hs-waiting *ngIf="waiting; else showSuchergebnis"></hs-waiting>
 
   <ng-template #showSuchergebnis>
