--- a/src/app/layout/header/login-logout.component.html
+++ b/src/app/layout/header/login-logout.component.html
@@ -42,7 +42,7 @@
   >
     <div class="col-12">
       <label for="usernameInput" class="col-form-label">
-        <small style="color:white">Username</small>
+        <small style="color: white">Username</small>
       </label>
       <input
         id="usernameInput"
@@ -58,7 +58,7 @@
 
     <div class="col-12">
       <label for="passwordInput" class="col-form-label">
-        <small style="color:white">Passwort</small>
+        <small style="color: white">Passwort</small>
       </label>
       <input
         id="passwordInput"
@@ -72,7 +72,8 @@
       />
     </div>
     <div class="col-12">
-      <button style = background-color:grey;
+      <button
+        style="background-color: grey"
         type="submit"
         class="btn btn-primary btn-sm"
         tabindex="3"
