--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -9,9 +9,11 @@
 -->
 
 <section class="card" [@fadeIn]="'in'">
-  <div class="card-header" style=background-color:grey >
-    <i class="material-icons" style=color:white>search</i>
-    <span class="ms-1 fw-bold" style=font-size:larger  style=color:white> Suchekriterien </span>
+  <div class="card-header" style="background-color: grey">
+    <i class="material-icons" style="color: white">search</i>
+    <span class="ms-1 fw-bold" style="font-size: larger" style="color: white">
+      Suchekriterien
+    </span>
   </div>
   <div class="card-body">
     <!--
@@ -60,16 +62,18 @@
         <div class="col offset-2 gy-3">
           <i class="material-icons">info</i>
           <!-- margin left -->
-          <span class="ms-1">
-            Hinweis: Keine Eingabe liefert alle Filme
-          </span>
+          <span class="ms-1"> Hinweis: Keine Eingabe liefert alle Filme </span>
         </div>
       </div>
 
       <div class="row">
         <div class="col offset-2 gy-3">
           <!-- default: type="submit" -->
-          <button style=background-color:grey type="submit" class="btn btn-primary">
+          <button
+            style="background-color: grey"
+            type="submit"
+            class="btn btn-primary"
+          >
             <i class="material-icons">search</i>
             <span class="ms-1">suchen</span>
           </button>
