login button grau

--- a/src/app/layout/header/login-logout.component.html
+++ b/src/app/layout/header/login-logout.component.html
@@ -25,6 +25,7 @@
   *ngIf="(isLoggedIn$ | async) || init; else login"
 >
   <button
+    style="background-color: grey"
     type="submit"
     class="btn btn-primary"
   >
