schauspieler in schlagwörter

--- a/src/app/film/create-film/create-schlagwoerter.component.html
+++ b/src/app/film/create-film/create-schlagwoerter.component.html
@@ -1,26 +1,26 @@
 <div class="row">
-  <label for="schauspielerInput" class="col col-2 col-form-label gy-3">
-    Schauspieler
+  <label for="schlagwoerterInput" class="col col-2 col-form-label gy-3">
+    Schlagwoerter
   </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="leonardoInput"
-        formControlName="leonardo"
+        id="spannendInput"
+        formControlName="spannend"
       />
-      <label for="leonardoInput" class="ms-1">Leondardo</label>
+      <label for="spannendInput" class="ms-1">Leondardo</label>
     </div>
 
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="salmaInput"
-        formControlName="salma"
+        id="gruseligInput"
+        formControlName="gruselig"
       />
-      <label for="salmaInput" class="ms-1">Salma</label>
+      <label for="gruseligInput" class="ms-1">Gruselig</label>
     </div>
   </div>
 </div>
