--- a/src/app/film/details-film/details-film.component.html
+++ b/src/app/film/details-film/details-film.component.html
@@ -57,8 +57,8 @@
         *ngIf="film.schlagwoerter.length > 0"
       >
         <div class="mt-2 ms-2">
-          <hs-details-schlagwoerterr [values]="film.schlagwoerterr">
-          </hs-details-schlagwoerterr>
+          <hs-details-schlagwoerter [values]="film.schlagwoerter">
+          </hs-details-schlagwoerter>
         </div>
       </div>
     </div>
