bewertung entity in rating geändert

--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="film">
   <hs-details-titel [titel]="film.titel"></hs-details-titel>
-  <hs-details-bewertung [bewertung]="film.bewertung"></hs-details-bewertung>
+  <hs-details-rating [rating]="film.rating"></hs-details-rating>
   <hs-details-genre [genre]="film.genre"></hs-details-genre>
   <hs-details-studio [studio]="film.studio"></hs-details-studio>
   <hs-details-release [release]="film.release"></hs-details-release>
