--- a/src/app/film/diagramme/balkendiagramm.html
+++ b/src/app/film/diagramme/balkendiagramm.html
@@ -1,4 +1,4 @@
-<h3>Bewertungen der Filme</h3>
+<h3>Rating  der Filme</h3>
 
 <section id="balkendiagramm">
   <ngx-charts-bar-vertical
@@ -7,7 +7,7 @@
     [xAxisLabel]="'IDs'"
     [showXAxisLabel]="true"
     [yAxis]="true"
-    [yAxisLabel]="'Bewertung'"
+    [yAxisLabel]="'Rating '"
     [showYAxisLabel]="true"
     [gradient]="true"
   >
