--- a/src/app/film/diagramme/liniendiagramm.html
+++ b/src/app/film/diagramme/liniendiagramm.html
@@ -1,4 +1,4 @@
-<h3>Bewertungen und Ums&auml;tze der Filme</h3>
+<h3>Rating  und Ums&auml;tze der Filme</h3>
 
 <section id="liniendiagramm" mt="5">
   <ngx-charts-line-chart
@@ -7,7 +7,7 @@
     [xAxisLabel]="'IDs'"
     [showXAxisLabel]="true"
     [yAxis]="true"
-    [yAxisLabel]="'Bewertungen und Umsätze'"
+    [yAxisLabel]="'Rating  und Umsätze'"
     [showYAxisLabel]="true"
     [gradient]="true"
   >
