--- a/src/app/film/update-film/update-film.component.html
+++ b/src/app/film/update-film/update-film.component.html
@@ -9,11 +9,11 @@
       </hs-update-genre>
       <hs-update-studio [updateForm]="updateForm" [currentValue]="film.studio">
       </hs-update-studio>
-      <hs-update-bewertung
+      <hs-update-rating
         [updateForm]="updateForm"
-        [currentValue]="film.bewertung"
+        [currentValue]="film.rating"
       >
-      </hs-update-bewertung>
+      </hs-update-rating>
       <hs-update-isan [updateForm]="updateForm" [currentValue]="film.isan">
       </hs-update-isan>
 
