--- a/src/app/layout/header/nav.component.html
+++ b/src/app/layout/header/nav.component.html
@@ -58,7 +58,7 @@
       <a
         routerLink="/filme/balkendiagramm"
         class="dropdown-item"
-        aria-label="Balkendiagramm fuer Bewertungen"
+        aria-label="Balkendiagramm fuer Rating "
       >
         <i class="material-icons">bar_chart</i>
         <span class="ms-1">Balkendiagramm</span>
@@ -66,7 +66,7 @@
       <a
         routerLink="/filme/liniendiagramm"
         class="dropdown-item"
-        aria-label="Liniendiagramm fuer Bewertungen"
+        aria-label="Liniendiagramm fuer Rating "
       >
         <i class="material-icons">multiline_chart</i>
         <span class="ms-1">Liniendiagramm</span>
@@ -74,7 +74,7 @@
       <a
         routerLink="/filme/tortendiagramm"
         class="dropdown-item"
-        aria-label="Tortendiagramm fuer Bewertungen"
+        aria-label="Tortendiagramm fuer Rating "
       >
         <i class="material-icons">pie_chart</i>
         <span class="ms-1">Tortendiagramm</span>
