--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -33,7 +33,7 @@
       </div>
 
       <hs-create-titel [createForm]="createForm"></hs-create-titel>
-      <hs-create-bewertung [createForm]="createForm"></hs-create-bewertung>
+      <hs-create-rating[createForm]="createForm"></hs-create-rating>
       <hs-create-genre [createForm]="createForm"></hs-create-genre>
       <hs-create-studio [createForm]="createForm"></hs-create-studio>
       <hs-create-umsatz [createForm]="createForm"></hs-create-umsatz>
