--- a/src/app/film/update-film/update-rating.component.html
+++ b/src/app/film/update-film/update-rating.component.html
@@ -1,16 +1,16 @@
 <div class="row">
-  <label for="bewertungUpdate" class="col col-2 col-form-label gy-3">
-    Bewertung
+  <label for="ratingUpdate" class="col col-2 col-form-label gy-3">
+    Rating 
   </label>
 
   <div class="col col-10 gy-3" [formGroup]="updateForm">
     <input
-      id="bewertungUpdate"
+      id="ratingUpdate"
       type="range"
       class="form-range"
       min="0"
       max="5"
-      formControlName="bewertung"
+      formControlName="rating"
     />
   </div>
 </div>
