--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -34,6 +34,7 @@
 
   <button
     class="navbar-toggler"
+    style="color: white"
     type="button"
     data-bs-toggle="collapse"
     data-bs-target="#navbarCollapse"
