--- a/src/app/layout/header/nav.component.html
+++ b/src/app/layout/header/nav.component.html
@@ -36,23 +36,24 @@
     <a
       routerLink="/filme/create"
       class="nav-link"
-      aria-label="Neues Film anlegen"
+      aria-label="Neuen Film anlegen"
     >
-      <i class="material-icons">menu_book</i>
-      <span class="ms-1">Neues Film</span>
+      <i class="material-icons" style="color: white" >menu_book</i>
+      <span class="ms-1" style="color: white" >Neuen Film</span>
     </a>
   </li>
 
   <li class="nav-item dropdown" *ngIf="isAdmin$ | async">
     <div
       class="nav-link dropdown-toggle"
+      style="color: white"
       id="navbarDropdownMenuLink"
       data-bs-toggle="dropdown"
       aria-haspopup="true"
       aria-expanded="false"
     >
-      <i class="material-icons">bar_chart</i>
-      <span class="ms-1">Diagramme</span>
+      <i class="material-icons" style="color: white" >bar_chart</i>
+      <span class="ms-1" style="color: white" >Diagramme</span>
     </div>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
       <a
