--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -33,14 +33,12 @@
       </div>
 
       <hs-create-titel [createForm]="createForm"></hs-create-titel>
-      <hs-create-rating[createForm]="createForm"></hs-create-rating>
+      <hs-create-rating [createForm]="createForm"></hs-create-rating>
       <hs-create-genre [createForm]="createForm"></hs-create-genre>
       <hs-create-studio [createForm]="createForm"></hs-create-studio>
       <hs-create-regisseur [createForm]="createForm"></hs-create-regisseur>
       <hs-create-newsletter [createForm]="createForm"></hs-create-newsletter>
-      <hs-create-schlagwoerter
-        [createForm]="createForm"
-      ></hs-create-schlagwoerter>
+      <hs-create-schlagwoerter [createForm]="createForm"></hs-create-schlagwoerter>
       <hs-create-isan [createForm]="createForm"></hs-create-isan>
 
       <div class="row">
