--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -3,7 +3,7 @@
   <hs-details-rating [rating]="film.rating"></hs-details-rating>
   <hs-details-genre [genre]="film.genre"></hs-details-genre>
   <hs-details-studio [studio]="film.studio"></hs-details-studio>
-  <hs-details-release [release]="film.release"></hs-details-release>
+  <hs-details-datum [datum]="film.datum"></hs-details-datum>
   <hs-details-regisseur [regisseur]="film.regisseur"></hs-details-regisseur>
   <hs-details-newsletter [newsletter]="film.newsletter"></hs-details-newsletter>
   <hs-details-isan [isan]="film.isan"></hs-details-isan>
