--- a/src/app/film/create-film/create-datum.component.html
+++ b/src/app/film/create-film/create-datum.component.html
@@ -1,7 +1,5 @@
 <div class="row">
-  <label for="releaseInput" class="col col-2 col-form-label gy-3">
-    Release
-  </label>
+  <label for="datumInput" class="col col-2 col-form-label gy-3"> Datum </label>
 
   <div class="col col-5 gy-3" [formGroup]="createForm">
     <div class="btn-group">
