--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header">
+  <div style="background-color: grey" class="card-header">
     <span class="ms-1 fw-bold">Neuer Film</span>
   </div>
 
