--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -4,6 +4,6 @@
   <hs-details-genre [genre]="film.genre"></hs-details-genre>
   <hs-details-studio [studio]="film.studio"></hs-details-studio>
   <hs-details-datum [datum]="film.datum"></hs-details-datum>
-  <hs-details-newsletter [newsletter]="film.newsletter"></hs-details-newsletter>
+  <hs-details-online [online]="film.online"></hs-details-online>
   <hs-details-isan [isan]="film.isan"></hs-details-isan>
 </div>
