--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -36,7 +36,7 @@
       <hs-create-rating [createForm]="createForm"></hs-create-rating>
       <hs-create-genre [createForm]="createForm"></hs-create-genre>
       <hs-create-studio [createForm]="createForm"></hs-create-studio>
-      <hs-create-newsletter [createForm]="createForm"></hs-create-newsletter>
+      <hs-create-online [createForm]="createForm"></hs-create-online>
       <hs-create-schlagwoerter
         [createForm]="createForm"
       ></hs-create-schlagwoerter>
