--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,6 @@
   class="display-1 mt-4"
   i18n="Greetings|Greetings at the home page header@@homeHeader"
 >
-Hallo, in unserer online Filmbibliothek kannst du alles mögliche interessante über 
-deine Lieblingsfilme erfahren.
-
+  Hallo, in unserer online Filmbibliothek kannst du alles mögliche interessante
+  über deine Lieblingsfilme erfahren.
 </h1>
