Anpassungen im Style

--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div style="background-color: grey" class="card-header">
-    <span class="ms-1 fw-bold">Neuer Film</span>
+    <span style="color: white" class="ms-1 fw-bold">Neuer Film</span>
   </div>
 
   <div class="card-body">
@@ -46,6 +46,7 @@
         <div class="col offset-2 gy-3">
           <!-- [disabled]="..." fuer Input (= Property Binding) -->
           <button
+            style="background-color: grey"
             type="submit"
             class="btn btn-primary"
             [disabled]="createForm.invalid"
