--- a/src/app/film/create-film/create-genre.component.html
+++ b/src/app/film/create-film/create-genre.component.html
@@ -5,13 +5,13 @@
       <input
         type="radio"
         class="form-check-input"
-        id="druckausgabeInput"
+        id="ComedyInput"
         formControlName="genre"
         name="genre"
         value="COMEDY"
       />
-      <label class="radio-inline ms-1" for="druckausgabeInput">
-        Druckausgabe
+      <label class="radio-inline ms-1" for="ComedyInput">
+        Comedy
       </label>
     </div>
 
@@ -19,12 +19,12 @@
       <input
         type="radio"
         class="form-check-input"
-        id="kindleInput"
+        id="ActionInput"
         formControlName="genre"
         name="genre"
         value="ACTION"
       />
-      <label class="radio-inline ms-1" for="kindleInput"> Kindle </label>
+      <label class="radio-inline ms-1" for="ActionInput"> Action </label>
     </div>
   </div>
 </div>
