--- a/src/app/film/create-film/create-schlagwoerter.component.html
+++ b/src/app/film/create-film/create-schlagwoerter.component.html
@@ -10,7 +10,7 @@
         id="spannendInput"
         formControlName="spannend"
       />
-      <label for="spannendInput" class="ms-1">Leondardo</label>
+      <label for="spannendInput" class="ms-1">Spannend</label>
     </div>
 
     <div class="form-checkbox">
