--- a/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
+++ b/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
@@ -57,7 +57,7 @@
               [state]="{ film: film }"
               title="Details anzeigen"
             >
-              <i class="material-icons">search</i>
+              <i style="color: black" class="material-icons">search</i>
             </a>
           </td>
           <!-- implizites "unsubscribe()" durch async -->
