--- a/src/app/film/update-film/update-genre.component.html
+++ b/src/app/film/update-film/update-genre.component.html
@@ -3,8 +3,8 @@
 
   <div class="col col-10 gy-3" [formGroup]="updateForm">
     <select class="form-select" formControlName="genre">
-      <option value="DRUCKAUSGABE">Druckausgabe</option>
-      <option value="KINDLE">Kindle</option>
+      <option value="ACTION">ACTION</option>
+      <option value="COMEDY">COMEDY</option>
     </select>
   </div>
 </div>
