--- a/src/app/layout/header/nav.component.html
+++ b/src/app/layout/header/nav.component.html
@@ -39,7 +39,7 @@
       aria-label="Neuen Film anlegen"
     >
       <i class="material-icons" style="color: white">menu_book</i>
-      <span class="ms-1" style="color: white">Neuen Film</span>
+      <span class="ms-1" style="color: white">Neuer Film</span>
     </a>
   </li>
 
