--- a/src/app/film/details-film/details-bearbeiten.component.html
+++ b/src/app/film/details-film/details-bearbeiten.component.html
@@ -4,7 +4,7 @@
     class="ms-1"
     aria-label="Film bearbeiten"
   >
-    <i class="material-icons">edit</i>
-    <span class="ms-1">Bearbeiten</span>
+    <i  style="color: black" class="material-icons">edit</i>
+    <span style="color: black" class="ms-1">Bearbeiten</span>
   </a>
 </div>
