--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -40,7 +40,7 @@
       <hs-create-schlagwoerter
         [createForm]="createForm"
       ></hs-create-schlagwoerter>
-      <hs-create-isan [createForm]="createForm"></hs-create-isan>
+      <hs-create-homepage [createForm]="createForm"></hs-create-homepage>
 
       <div class="row">
         <div class="col offset-2 gy-3">
