--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -5,5 +5,5 @@
   <hs-details-studio [studio]="film.studio"></hs-details-studio>
   <hs-details-datum [datum]="film.datum"></hs-details-datum>
   <hs-details-online [online]="film.online"></hs-details-online>
-  <hs-details-isan [isan]="film.isan"></hs-details-isan>
+  <hs-details-homepage [homepage]="film.homepage"></hs-details-homepage>
 </div>
