--- a/src/app/film/update-film/update-film.component.html
+++ b/src/app/film/update-film/update-film.component.html
@@ -11,8 +11,8 @@
       </hs-update-studio>
       <hs-update-rating [updateForm]="updateForm" [currentValue]="film.rating">
       </hs-update-rating>
-      <hs-update-isan [updateForm]="updateForm" [currentValue]="film.isan">
-      </hs-update-isan>
+      <hs-update-homepage [updateForm]="updateForm" [currentValue]="film.homepage">
+      </hs-update-homepage>
 
       <div class="row">
         <div class="col offset-2 gy-3">
