--- a/src/app/film/diagramme/balkendiagramm.html
+++ b/src/app/film/diagramme/balkendiagramm.html
@@ -4,7 +4,7 @@
   <ngx-charts-bar-vertical
     [results]="dataItems"
     [xAxis]="true"
-    [xAxisLabel]="'IDs'"
+    [xAxisLabel]="'Titel'"
     [showXAxisLabel]="true"
     [yAxis]="true"
     [yAxisLabel]="'Rating '"
