--- a/src/app/film/diagramme/liniendiagramm.html
+++ b/src/app/film/diagramme/liniendiagramm.html
@@ -4,7 +4,7 @@
   <ngx-charts-line-chart
     [results]="series"
     [xAxis]="true"
-    [xAxisLabel]="'IDs'"
+    [xAxisLabel]="'Titel'"
     [showXAxisLabel]="true"
     [yAxis]="true"
     [yAxisLabel]="'Rating  und Umsätze'"
