--- a/src/app/film/create-film/create-homepage.component.html
+++ b/src/app/film/create-film/create-homepage.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <label for="homepageInput" class="col col-2 col-form-label gy-3"> Homepage * </label>
+  <label for="homepageInput" class="col col-2 col-form-label gy-3">
+    Homepage *
+  </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="input-group">
       <input
@@ -22,7 +24,7 @@
           class="ms-1"
           *ngIf="homepage.errors['required'] || homepage.errors['pattern']"
         >
-          Eine g&uuml;ltige Homepage, z.B. acme@homepage.com, muss eingegeben
+          Eine g&uuml;ltige Homepage, z.B. www.homepage.com, muss eingegeben
           werden.
         </span>
       </div>
