--- a/src/app/film/create-film/create-genre.component.html
+++ b/src/app/film/create-film/create-genre.component.html
@@ -10,9 +10,7 @@
         name="genre"
         value="COMEDY"
       />
-      <label class="radio-inline ms-1" for="ComedyInput">
-        Comedy
-      </label>
+      <label class="radio-inline ms-1" for="ComedyInput"> Comedy </label>
     </div>
 
     <div class="form-check">
