--- a/src/app/film/create-film/create-homepage.component.html
+++ b/src/app/film/create-film/create-homepage.component.html
@@ -6,7 +6,7 @@
     <div class="input-group">
       <input
         id="homepageInput"
-        placeholder="Homepage, z.B. acme@homepage.com"
+        placeholder="Homepage, z.B. www.homepage.com"
         class="form-control"
         required
         minlength="2"
