--- a/src/app/film/update-film/update-film.component.html
+++ b/src/app/film/update-film/update-film.component.html
@@ -11,7 +11,10 @@
       </hs-update-studio>
       <hs-update-rating [updateForm]="updateForm" [currentValue]="film.rating">
       </hs-update-rating>
-      <hs-update-homepage [updateForm]="updateForm" [currentValue]="film.homepage">
+      <hs-update-homepage
+        [updateForm]="updateForm"
+        [currentValue]="film.homepage"
+      >
       </hs-update-homepage>
 
       <div class="row">
