--- a/src/app/film/update-film/update-homepage.component.html
+++ b/src/app/film/update-film/update-homepage.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <label for="homepageUpdate" class="col col-2 col-form-label gy-3"> HOMEPAGE </label>
+  <label for="homepageUpdate" class="col col-2 col-form-label gy-3">
+    HOMEPAGE
+  </label>
 
   <div class="col col-10 gy-3" [formGroup]="updateForm">
     <div class="input-group">
